src/components/TreckerCard/TreckerCard.module.scss
.trecker-card {
  background: #e15241;
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  gap: 10px;

  min-width: 262px;
  min-height: 262px;
  border-radius: 12px;
  position: relative;
}

.trecker-card {
  &__btn {
    border-radius: 100%;
    width: 37px;
    height: 37px;

    display: flex;
    align-items: center;
    justify-content: center;
  }
  &__btn--close {
    width: 25px;
    height: 25px;
    position: absolute;
    top: 10px;
    right: 10px;
  }

  &__controls {
    display: flex;
    justify-content: center;
    gap: 15px;
  }

  &__timer {
    font-family: 'Roboto';
    font-style: normal;
    font-weight: 300;
    font-size: 85.9688px;
    line-height: 101px;

    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);

    display: flex;
    justify-content: center;
    align-items: center;
    text-align: center;
  }

  &__title-wraper {
    display: flex;
    flex-direction: column;
    gap: 5px;
    padding-left: 10px;
  }

  &__title {
    font-weight: 700;
    font-size: 16.375px;
    line-height: 19px;
  }
  &__sub-title {
    font-weight: 400;
    font-size: 12.2812px;
    line-height: 14px;
  }
}

.trecker-card__timer {
  &.started > span {
    animation-name: timerBlink;
    animation-duration: 1s;
    animation-iteration-count: infinite;
    transition: color 1s;
  }
  @keyframes timerBlink {
    0% {
      color: transparent;
    }
    100% {
      color: black;
    }
  }
}

